# cameracupte

./: .gitignore  PKGBUILD  README.md  implementation_plan.md  package-lock.json  package.json  task.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: camera.json
src-tauri/src/: camera.rs  decoder.rs  lib.rs  v4l2_out.rs
src/mediapipe/: face_detection.js
