[package]
name = "cameracupte"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gphoto2 = "3.4.1"
v4l = "0.14.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync"] }
turbojpeg = "1.4.0"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
crossbeam-channel = "0.5.15"
base64 = "0.22.1"

